@@ -22,6 +22,7 @@ MovieJukebox 2.0 BETA
   - Fixed defect #1367 PART title processing broke
   - Fixed defect #1376 Null Pointer Exception in MovieDirectoryScanner
   - Enhancement  #1378 Kinopoisk plugin search enhancement
+  - Fixed defect #1394 TV Series Episode names not picked up from filename
 
 MovieJukebox 1.9 (r1500)
 ------------------------
